--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -8,3 +8,6 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 .landing-page {
   text-align: center;
 }
+.signup-page {
+  text-align: center;
+}
