Refactor sign in page as handlebars template

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,13 +1,11 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
-.start-hidden {
-  display: none;
-}
 
-.landing-page {
+
+.sign-in-page {
   text-align: center;
 }
-.signup-page {
+.sign-up-page {
   text-align: center;
 }
