List items display in plain text
Adds handle bars template and function to display data from
item index action in browser

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -9,3 +9,7 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 .sign-up-page {
   text-align: center;
 }
+
+.dev-hide{
+  display:none;
+}
