--- a/assets/scripts/templates/item-index.handlebars
+++ b/assets/scripts/templates/item-index.handlebars
@@ -1,7 +1,11 @@
 {{#each items as |item|}}
 
 <div class="item-container" data-id="{{item.id}}" data-content="{{item.content}}">
-  <div class="item-content">{{item.content}}</div>
+
+  <div class="item-content">
+    <p>{{item.content}}<button id="item-destroy" class="btn btn-default">Delete</button></p>
+
+  </div>
 </div>
 
 {{/each}}
