adds basic delete item feature

--- a/assets/scripts/templates/create-item.handlebars
+++ b/assets/scripts/templates/create-item.handlebars
@@ -1,6 +1,6 @@
 <div class="item-container" data-id="{{item.id}}" data-content="{{item.content}}">
 
   <div class="item-content">
-    <p>{{item.content}}<button id="item-destroy" class="btn btn-default">Delete</button></p>
+    <p>{{item.content}}<button class="btn btn-default item-destroy">Delete</button></p>
   </div>
 </div>
