Adds basic edit item feature

--- a/assets/scripts/templates/edit-item.handlebars
+++ b/assets/scripts/templates/edit-item.handlebars
@@ -1,4 +1,4 @@
-<div data-id="{{id}}" data-content="{{content}}">
+<div data-id="{{id}}" data-content="{{content}}" id="current-edit">
   <div class="form-group">
     <form class="item-edit-form">
       <input name="item[content]" type="text" class="form-control" required="" autofocus="">
