refactor edit item functions

--- a/assets/scripts/templates/edit-item.handlebars
+++ b/assets/scripts/templates/edit-item.handlebars
@@ -4,5 +4,6 @@
       <input name="item[content]" type="text" class="form-control" required="" autofocus="">
       <button class="btn btn-default" type="submit">Save</button>
     </form>
+    <div><button class="btn btn-default cancel-edit">Cancel</button></div>
   </div>
 </div>
