--- a/assets/scripts/templates/edit-item.handlebars
+++ b/assets/scripts/templates/edit-item.handlebars
@@ -1,9 +1,11 @@
 <div data-id="{{item.id}}" data-content="{{item.content}}" id="current-edit">
-  <div class="form-group">
-    <form class="item-edit-form">
-      <input name="item[content]" type="text" class="form-control" required="" autofocus="">
-      <button class="btn btn-default" type="submit">Save</button>
-    </form>
+  <div>
+    <div class="form-group">
+      <form class="item-edit-form">
+        <input name="item[content]" type="text" class="form-control" required="" autofocus="">
+        <button class="btn btn-default" type="submit">Save</button>
+      </form>
+    </div>
     <div><button class="btn btn-default cancel-edit">Cancel</button></div>
   </div>
 </div>
