Fixes bug with on clickOutFunction

--- a/assets/scripts/templates/edit-item.handlebars
+++ b/assets/scripts/templates/edit-item.handlebars
@@ -1,4 +1,6 @@
-<div data-id="{{item.id}}" data-content="{{item.content}}" id="current-edit">
+
+
+<div class="current-edit" data-id="{{item.id}}" data-content="{{item.content}}">
   <div>
     <div class="form-group">
       <form class="item-edit-form">
