--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -13,3 +13,8 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 .dev-hide{
   display:none;
 }
+
+.spacer{
+width: 100%;
+height: 10px;
+}
