Adds response messages for change pass and sign up

--- a/assets/scripts/templates/sign-up.handlebars
+++ b/assets/scripts/templates/sign-up.handlebars
@@ -15,5 +15,5 @@
       </form>
     <button id="back-to-signin" class="btn btn-default">Already have an account?</button>
   </div>
-
+  <p id="signup-message"></p>
 </div>
