--- a/assets/scripts/templates/main-page.handlebars
+++ b/assets/scripts/templates/main-page.handlebars
@@ -1,5 +1,6 @@
 
   <button id="signout" class="btn btn-default ">Sign Out</button>
+  <button id="goto-changepass" class="btn btn-default ">Change Password</button>
 
   <form id="item-create" class="form-signin">
     <label>Create Item</label>
