adds back to mainpage button

--- a/assets/scripts/templates/change-password.handlebars
+++ b/assets/scripts/templates/change-password.handlebars
@@ -7,3 +7,4 @@
   <button class="btn btn-lg btn-primary btn-block" type="submit">Change Password</button>
   <p id="password-error"></p>
 </form>
+<button id="back-to-todo" class="btn btn-default">Back To List</button>
