--- a/assets/scripts/templates/change-password.handlebars
+++ b/assets/scripts/templates/change-password.handlebars
@@ -4,7 +4,7 @@
   <input name="passwords[old]" type="password" id="inputPassword" class="form-control" placeholder="Old password" required="">
   <label for="inputPassword" class="sr-only">Password</label>
   <input name="passwords[new]" type="password" id="inputPassword" class="form-control" placeholder="New Password" required="">
-  <button class="btn btn-lg btn-primary btn-block" type="submit">Change Password</button>
+  <button class="btn btn-default btn-block" type="submit">Change Password</button>
   <p id="password-error"></p>
 </form>
 <button id="back-to-todo" class="btn btn-default">Back To List</button>
