--- a/assets/scripts/templates/main-page.handlebars
+++ b/assets/scripts/templates/main-page.handlebars
@@ -1,12 +1,12 @@
-
-  <button id="signout" class="btn btn-default ">Sign Out</button>
-  <p id="signout-message"></p>
-  <button id="goto-changepass" class="btn btn-default ">Change Password</button>
-
+<div class="btn-group" role="group">
+  <button type="button" id="signout" class="btn btn-default group">Sign Out</button>
+  <button type="button" id="goto-changepass" class="btn btn-default group">Change Password</button>
+</div>
+<p id="signout-message"></p>
   <form id="item-create" class="form-signin">
     <label>Create Item</label>
     <input name="item[content]" type="text" class="form-control" required="" autofocus="">
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Create</button>
+    <button class="btn btn-default btn-block" type="submit">Create</button>
   </form>
 
 
