--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -1,7 +1,28 @@
 $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 @import '~bootstrap-sass/assets/stylesheets/bootstrap';
 
+html body {
+    height: 100%;
+}
+#current-page{
+  width: 100%;
+}
 
+.column {
+  // margin-bottom: -9999px;
+  padding-bottom: 9999px;
+  -webkit-box-shadow: 0 0 2px 2px grey;
+    -moz-box-shadow: 0 0 2px 2px grey;
+    box-shadow: 0 0 2px 2px grey;
+}
+.dark-grey{
+  background-color: #3a3a3a;
+}
+
+.container-fluid {
+  min-height: 100%;
+  overflow: hidden;
+}
 
 .sign-in-page {
   text-align: center;
@@ -14,8 +35,21 @@ $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
 .dev-hide {
   display: none;
 }
+.btn-default {
+  background-color: darkgrey;
+}
 
-.spacer {
-  width: 100%;
-  height: 10px;
+header{
+  background-color: #c6c4c4;
+  margin-bottom: 35px;
+  text-align: center;
+}
+
+h1 {
+  font-size: 60px;
+}
+
+.group{
+  margin: 0 auto;
+  text-align: center;
 }
