styles main page

--- a/assets/scripts/templates/create-item.handlebars
+++ b/assets/scripts/templates/create-item.handlebars
@@ -4,8 +4,8 @@
   <div class="item-content">
     <p>
       {{item.content}}
-      <button class="btn btn-default item-destroy">Delete</button>
-      <button class="btn btn-default item-edit">Edit</button>
+      <button class="btn btn-default btn-sm item-destroy">Delete</button>
+      <button class="btn btn-default btn-sm item-edit">Edit</button>
     </p>
   </div>
   <p id="item-message"></p>
