--- a/assets/scripts/templates/edit-item.handlebars
+++ b/assets/scripts/templates/edit-item.handlebars
@@ -8,6 +8,6 @@
         <button class="btn btn-default" type="submit">Save</button>
       </form>
     </div>
-    <div><button class="btn btn-default cancel-edit">Cancel</button></div>
+    <div class="inline"><button class="btn btn-default cancel-edit">Cancel</button></div>
   </div>
 </div>
