--- a/assets/scripts/templates/item-index.handlebars
+++ b/assets/scripts/templates/item-index.handlebars
@@ -5,8 +5,8 @@
   <div class="item-content">
     <p>
       {{item.content}}
-      <button class="btn btn-default item-destroy">Delete</button>
-      <button class="btn btn-default item-edit">Edit</button>
+      <button class="btn btn-default item-destroy btn-sm">Delete</button>
+      <button class="btn btn-default item-edit btn-sm">Edit</button>
     </p>
 
   </div>
