--- a/assets/scripts/templates/main-page.handlebars
+++ b/assets/scripts/templates/main-page.handlebars
@@ -1,7 +1,16 @@
-<div class="btn-group" role="group">
-  <button type="button" id="signout" class="btn btn-default group">Sign Out</button>
-  <button type="button" id="goto-changepass" class="btn btn-default group">Change Password</button>
+<div class="row">
+  <div class="col-md-4 col-xs-4">
+    <div class="btn-group-lg" role="group">
+      <button type="button" id="signout" class="btn btn-default">Sign Out</button>
+      <button type="button" id="goto-changepass" class="btn btn-default">Change Password</button>
+    </div>
+  </div>
+
+  <div clas="col-md-6 col-xs-6"></div>
+
+<div class="col-md-2 col-xs-2"></div>
 </div>
+
 <p id="signout-message"></p>
   <form id="item-create" class="form-signin">
     <label>Create Item</label>
