--- a/assets/scripts/templates/edit-item.handlebars
+++ b/assets/scripts/templates/edit-item.handlebars
@@ -2,12 +2,13 @@
 
 <div class="current-edit" data-id="{{item.id}}" data-content="{{item.content}}">
   <div>
-    <div class="form-group">
-      <form class="item-edit-form">
+    <div class="form-group inline">
+      <form class="item-edit-form inline">
         <input name="item[content]" type="text" class="form-control" required="" autofocus="">
-        <button class="btn btn-default" type="submit">Save</button>
+        <button class="btn btn-default btn-small" type="submit">Save</button>
       </form>
+      <button class="btn btn-default cancel-edit inline btn-small">Cancel</button>
+
     </div>
-    <div class="inline"><button class="btn btn-default cancel-edit">Cancel</button></div>
   </div>
 </div>
