--- a/assets/scripts/templates/sign-in.handlebars
+++ b/assets/scripts/templates/sign-in.handlebars
@@ -16,5 +16,5 @@
 
 
   <button id="no-account" class="btn btn-default">No account? Sign up here!</button>
-  <p id="signin-message"></p>
+  <p class="message-text" id="signin-message"></p>
 </div>
