--- a/assets/scripts/templates/change-password.handlebars
+++ b/assets/scripts/templates/change-password.handlebars
@@ -5,6 +5,6 @@
   <label for="inputPassword" class="sr-only">Password</label>
   <input name="passwords[new]" type="password" id="inputPassword" class="form-control" placeholder="New Password" required="">
   <button class="btn btn-default btn-block" type="submit">Change Password</button>
-  <p id="password-error"></p>
+  <p class="message-text" id="password-error"></p>
 </form>
 <button id="back-to-todo" class="btn btn-default">Back To List</button>
